# Ecp-clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  clipboard.rs  config.rs  db.rs  ecp_cli_main.rs  main.rs  startup.rs  win_v_takeover.rs
src/ui/: app.rs  i18n.rs  mod.rs  theme.rs  widgets.rs
