[package]
name = "ecp-clipboard"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
clipboard-win = "5.4"
directories = "6"
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
raw-window-handle = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.20"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
